# digital-examen-stantion

./: .gitignore  blank.py  blank_geometry.py  blank_processor.py  build_all.sh  config.json  digit_inference.py  digit_model.pth  field_regions.py  infer_titul.py  install_build_deps.ps1  install_linux_deps.sh  main.py  manual_review_queue.json  proverka.py  qr_parser.py  recognizer.py  requirements-linux.txt  requirements.txt  run.bat  scan_logger.py  scanner_hal_wrapper.py  scanner_sane.py  scanner_shm.py  scanner_twain.py  scanner_wia.py  simple_scan_tif.py  station_integration.py  titul.py  utils.py
.github/workflows/: build-linux.yml  build-windows.yml
output_module/: CMakeLists.txt  build.sh  build_linux.sh  build_unix.sh  build_windows.bat  output_generator_wrapper.py
output_module/include/: output_generator.hpp
output_module/include/core/: file_handle.hpp  memory_buffer.hpp  pair_storage.hpp  sheet_data.hpp  static_string.hpp  static_vector.hpp  types.hpp  uuid_generator.hpp
output_module/include/formatters/: json_builder.hpp
output_module/include/generators/: pdf_generator.hpp  pdf_primitives.hpp  tif_generator.hpp  zip_packager.hpp  zip_primitives.hpp
output_module/src/: main.cpp  python_bindings.cpp
output_module/tests/: test_json_builder.cpp  test_static_string.cpp
scanner_module/: CMakeLists.txt  ScannerHAL.hpp  build_linux.sh  build_pybind.bat  build_pybind.sh  build_windows.bat  main.cpp  python_bindings.cpp
